--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Sreeharsha Bandi"
-description              : "#######"
+name                     : "Home"
+description              : ""
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -97,27 +97,18 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Threat Hunter"
   location         : "India"
-  email            : "admin@admin.com"
+  email            : "bandi5398@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      url: mailto:bandi5398@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://bac2binary.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
-
+      url: "https://twitter.com/0xHarsha"
+    
 # Site Footer
 footer:
   links:
