--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Threat Hunter"
   location         : "India"
-  email            : "bandi5398@gmail.com"
+  #email            : "bandi5398@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
