--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Sreeharsha Bandi"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Threat Hunter"
+  bio              : "I am a Technophile, good at Threat Hunting | Reverse Engineering | Red teaming"
   location         : "India"
   #email            : "bandi5398@gmail.com"
   links:
