--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sreeharsha Bandi
 description: 'Business Card Page'
 url: 'https://bac2binary.github.io'
-baseurl: ''
+baseurl: '/wiz/'
 profilepic: '/images/harsha.png'
 bkimage: '/images/bk1.jpg'
 google_analytics: UA-XXXXXX-X
