--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Prabhu Chaitanya Cheedalla
 description: 'Business Card Page'
 url: 'https://bac2binary.github.io'
 baseurl: '/wiz/'
-profilepic: '/images/prabhu.png'
+profilepic: '/images/prabhu.jpg'
 bkimage: '/images/bk1.jpg'
 google_analytics: UA-XXXXXX-X
 font_awesome: 'XXXXXXXXXX.js'
