--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Prabhu Chaitanya Cheedalla
+title: Prabhu Cheedalla
 description: 'Business Card Page'
 url: 'https://bac2binary.github.io'
 baseurl: '/wiz/'
