--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Prabhu Cheedalla
-description: 'Business Card Page'
+description: 
 url: 'https://explorer9.github.io/'
 baseurl: '/wiz/'
 profilepic: '/images/prabhu.jpg'
