--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Prabhu Cheedalla
 description: 
 url: 'https://explorer9.github.io/'
-baseurl: '/wiz/'
+baseurl: '/wiz'
 profilepic: '/images/prabhu.jpg'
 bkimage: '/images/bk1.jpg'
 google_analytics: UA-XXXXXX-X
