--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   twitter_username: 
 #  facebook_username: joshgerdes
   github_username:  explorer9
-  linkedin_username:  Prabhu Cheedalla
+  linkedin_username:  prabhu-cheedalla-000b45ba
   #meetup_name: Azure-Meetup-Rostock-MV
 
 # Build settings
